tests/aster/x/mochi/rosetta/anagrams-deranged-anagrams.error
error[A003]: undefined variable w
  --> /workspace/mochi/tests/rosetta/x/Mochi/anagrams-deranged-anagrams.mochi:57:23

 57 |     let k = sortRunes(w)
    |                       ^

help:
  Declare w before use
